# src/app/Http/Resources/Portfolio/PortfolioReource.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Resources\Portfolio;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class PortfolioReource extends JsonResource
+{
+    /**
+     * @OA\Schema(
+     *     schema="PortfolioResource",
+     *     type="object",
+     *     @OA\Property(property="id", type="integer", description="ID of the portfolio"),
+     *     @OA\Property(property="name", type="string", description="Name of the portfolio"),
+     *     @OA\Property(property="balance", type="string", description="Balance of the portfolio, as a string with a '$' symbol"),
+     *     @OA\Property(property="created_at", type="string", format="date-time", description="Portfolio creation time"),
+     *     @OA\Property(property="updated", type="string", format="date-time", description="Portfolio last update time")
+     * )
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'balance' => '0.0$',
+            'created_at' => $this->created_at,
+            'updated' => $this->updated_at,
+        ];
+    }
+}
