# src/app/Models/Portfolio.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+class Portfolio extends Model
+{
+    protected $fillable = ['name', 'user_id'];
+
+    public function user() : BelongsTo
+    {
+        return $this->belongsTo(User::class, 'id', 'user_id');
+    }
+}
